# pisight

./: .gitignore  CHANGELOG.md  README.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PRIVACY.md  SETUP_RASPBERRY_PI.md  USAGE.md
raspberry_face_recognition/: __init__.py  __main__.py  cli.py  config.py  dataset.py  vision.py
scripts/: install_pi.sh
systemd/: pisight.service  raspberry-face-recognition.service
tests/: test_cli.py  test_config.py  test_dataset.py
