[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pisight"
version = "0.1.0"
description = "A Raspberry Pi local face recognition toolkit built around OpenCV."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Yakup24" }
]
dependencies = [
  "numpy>=1.23"
]

[project.scripts]
pisight = "raspberry_face_recognition.cli:main"
raspberry-face-recognition = "raspberry_face_recognition.cli:main"

[tool.setuptools.packages.find]
include = ["raspberry_face_recognition*"]
